<resources>
    <string name="app_name">在路上</string>
    <string name="goal">进展</string>
    <string name="mood">心情</string>
    <string name="news">新闻</string>
    <string name="image">图片</string>
    <string name="music">音乐</string>
    <string name="laboratory">实验室</string>
    <string name="change_password">修改密码</string>
    <string name="about_me">关于作者</string>
    <string name="feedback">提交反馈</string>
    <string name="logout">退出登录</string>
    <string name="about_me_title">关于我，关于路</string>
    <string name="about_me_content">
        在写到这里之前，我曾想过很多个版本，但真正要下笔（误）时，却不知该如何开始。
        在路上或许只会有我一个用户，这里的话，也或许只有我才会看。以下，就当做是自己的一些总结。\n\n
        在我的少年时代，与物质上的贫瘠所相反的，精神世界可谓丰富。\n\n
        沉迷于小说的世界不可自拔，幻想着以后成为像小说主角那样的大人物，醉卧美人膝，醒掌天下权。\n\n
        又过了几年，觉得之前的想法实在太low，太中二，得改。\n\n
        ------其实年入千万，带着美丽的姑娘们环游世界，也不错。\n\n
        就在这样的幻想当中，逐渐走向成年。\n\n
        我开始工作/打工，业余之时，依旧不忘设想将来的美好，自己是会怎样的一个牛人，还总有很多恰逢其会的逼让我去装，飘逸而又洒脱。\n\n
        到了近两年，开始忧虑、痛苦，自己看上去也没什么特别的，别人不会的，我不会，别人会的，我也不会。\n\n
        如此来看，并没有什么客观的事实能够说明，我不比别人差。\n\n
        设想中更优秀的自己，与我渐行渐远，我永远也成不了那样的人了。\n\n
        每每深夜中想到此处，便辗转难眠。\n\n
        我终于想要证明自己，用别人都认可的方式，不再逃避现实。不过这一切好像都已经太晚了。\n\n
        同龄人大概是大学毕业的年纪，而我的学习才蹒跚起步。\n\n
        有多想回到那些起早贪黑玩游戏的日子里努力学习自不用说，但辩证的想，如果没有这些经历，即便重活一次，也不会有什么变化。\n\n
        过去的事情已经尘埃落定，是无法改变的了，但未来不是，这也是我爱幻想未来的原因。\n\n
        时间本身没有力量，但我们在这时间内做的事情有。\n\n
        所以我开始学习Android，只为了几年后一个不同的自己。\n\n
        看过朱炫的一篇文，有句话说『这种只要剧情稍微热血一点就会热泪盈眶的傻逼，已经不多了』。\n\n
        我想，我注定就是这样的傻逼。\n\n
        2016/3/23\n\n\n\n
        附:
    </string>
    <string name="about_me_reference_title">
        要怎样努力，才能成为很厉害的人？
    </string>
    <string name="about_me_reference_content">
        首先，少年，答应别人的承诺，就一定要兑现。\n\n
        我以前啊，和你一样，很想成为一个很厉害很厉害很厉害的人。\n\n
        喜欢看热血的东西，幻想自己是屠龙的勇士，登塔的先锋，我左手有剑，右手有光，没头没脑的燃烧自己，敌人的骑军来了，我说你们何人堪与之战，我的女人在等我。\n\n
后来我现实了一点，我觉得我要成为那种说走就走，说日就日的男人，我梳大背头，流浪在欧洲或者新几内亚的，我拍孩子，拍野兽，拍流浪的雏妓，与罗伯特德尼罗握手，说嘿，我给你写了愤怒的公牛2。\n\n
再后来，我觉得我人生的梦想，是在城市中心买上一间顶层公寓，把一整面墙都改造成钢化玻璃，在灯火通明的夜晚，我就要端着酒站在巨大的窗前，看整个城市在呼吸，然后我的朋友叩门，他带来了一打嫩模，我们就玩一些成年人的游戏。\n\n
现在，我发现龙并不存在，我不会骑马，不会用单反，家住2楼，我能做的，就是把眼前的事儿做好，赚到足够的钱，这样我可以给我的姑娘一个地球仪，然后用飞镖扎它，扎到哪儿，就去哪儿玩。\n\n
这样看来，虽然我的想法随着生殖器的发育，始终在变，但那个很厉害很厉害的人，一直离我很远，甚至越来越远。\n\n
我心中曾经执剑的少年，此刻也混迹在市井之间。\n\n
血似乎都凉了。\n\n
我也不是没有惶恐过，是不是我这一生，都不能左手持剑，右手握着罗伯特德尼罗，说这里的嫩模随便你玩但是你他妈别从窗户上掉下去。\n\n
这样一看，我逊得不行，我的朋友都是一些凡人，比我还逊，业余生活就是推塔、中单、跪。\n\n
我心想，我是不是这辈子都要做一个逊逼，直到我的坟墓上写好墓志铭，我甚至都想好了：\n\n
我来，我见，我挂了。\n\n
最后我给了自己一个否定的答复，我不要。\n\n
我喜欢我的朋友们，喜欢我现在的生活，首先我希望你明白，没有厉害与逊逼得区分，只有血的凉与热，有的人觉得生活就这样吧，我算了，现在没什么不好。\n\n
有的人觉得生活这样挺好，但是我还要更好。\n\n
这种只要剧情稍微热血一点就会热泪盈眶的傻逼，已经不多了，一刻也不要停留。\n\n
所以现在，我和你不一样了，我仍然想成为一个很厉害很厉害很厉害的人，像我们这种剧情稍微热血一点就会热泪盈眶的傻逼，要好好珍惜自己。\n\n
很多人坐下来了，跟你说你不行，说你省点儿心吧，说你请静一静。\n\n
汹涌的人群就把你这样的少年淹没了，人群散去的时候，你也不见了，你那些承诺，谁也听不见，这个世界对于你，就再不可能有什么更有趣更漂亮的女朋友。\n\n
你就失约了，小逼崽子。\n\n
这么跟你说。\n\n
虽然随着年龄的增长，我趋于现实，不能像你那样分分钟冲动的燃烧，然而我每时每刻都有想做的事，有想达成的目标。\n\n
不排除以后的某一年，我会握着罗伯特德尼罗的手，他说这是你写得吗，愤怒的公牛2，只要他还没死。\n\n
故事里拳王拉莫塔忍着伤，他举着铁拳，挥汗如雨，要和命运斗争，他说我怎么能失约呢，我是那个要成为很厉害很厉害的拳王拉莫塔！\n\n
小伙儿，成为很厉害很厉害的人，最重要的，就是要热血，永远也不要让你的血凉下去，你凉下去了，就再也不能找到一个更有趣更漂亮的女友，你就失约了，于是那天她踏梦而来，就成了一个彻头彻尾的笑话。\n\n
当有一天你成为你讨厌的那种人，浑浑噩噩，你走在街上，看见那些更有趣更漂亮的女孩，你会不会想起多年以前，你说我答应你，在一个承诺就是永远的年纪。\n\n
读书，交友，美容，都不如你这一腔狗血，滚烫，灼人，你要燃上大半辈子，才对得起你现在说的这些话。\n\n
我听闻最美的故事，是公主死去了，屠龙的少年还在燃烧。\n\n
火苗再小，你都要反复的点燃。\n\n
所谓热血的少年，青涩的爱恋，死亡与梦之约。\n\n
这么好的故事。\n\n
你可别演砸了。\n\n
        朱炫\n
        发布于 2014-03-11\n
    </string>
</resources>
