<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_goal"
            android:icon="@drawable/ic_home_black_24dp"
            android:checked="true"
            android:title="@string/goal"/>
        <item
            android:id="@+id/menu_news"
            android:icon="@drawable/ic_fiber_new_black_24dp"
            android:checked="true"
            android:title="@string/news"/>
        <item
            android:id="@+id/menu_image"
            android:icon="@drawable/ic_camera_black_24dp"
            android:checked="true"
            android:title="@string/image"/>
        <item
            android:id="@+id/menu_mood"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:checked="true"
            android:title="@string/mood"
            android:visible="false"/>
        <item
            android:id="@+id/menu_music"
            android:icon="@drawable/ic_music_note_black_24dp"
            android:checked="true"
            android:title="@string/music"/>
    </group>
        <group android:id="@+id/separator">
            <item
                android:id="@+id/menu_change_password"
                android:icon="@drawable/change_password"
                android:title="@string/change_password"/>
                    <item
                        android:id="@+id/menu_laboratory"
                        android:icon="@drawable/laboratory"
                        android:title="@string/laboratory"
                        android:visible="false"/>
                    <item
                        android:id="@+id/menu_about_me"
                        android:icon="@drawable/about_me"
                        android:title="@string/about_me"/>
                    <item
                        android:id="@+id/menu_feedback"
                        android:icon="@drawable/feedback"
                        android:title="@string/feedback"/>
                    <item
                        android:id="@+id/menu_logout"
                        android:icon="@drawable/logout"
                        android:title="@string/logout"/>
        </group>
</menu>